--- a/Pages/Disaster/AddDisaster.cshtml
+++ b/Pages/Disaster/AddDisaster.cshtml
@@ -14,13 +14,7 @@
 
 <div class="container p-2">
 
-	<div class="container mt-4" id="disaster-form-container">
-
-		<div class="row pt-3">
-			<div class="input-group">
-				<a class="btn btn-outline-primary" asp-area="" asp-page="/Disaster/Index"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</a>
-			</div>
-		</div>
+	<div class="container mt-4 disaster-form-container">
 
 		<div class="row pt-4">
 			<div class="col text-center">
