Adjusted the disaster-form-container

--- a/Pages/EvacuationCenter/_AddEvacuationCenter.cshtml
+++ b/Pages/EvacuationCenter/_AddEvacuationCenter.cshtml
@@ -25,11 +25,11 @@
 	}
 </style>
 
-<div class="container p-2">
-	
-	<div class="container mt-4" id="disaster-form-container">
-		
-		<div class="row pt-4">
+<div class="container p-2 form-container">
+
+	<div class="container mt-4 form-container-content">
+
+		<div class="row">
 			<div class="col text-center">
 				<h1>Add Evacuation Center</h1>
 			</div>
