--- a/Pages/Disaster/AddDisaster.cshtml
+++ b/Pages/Disaster/AddDisaster.cshtml
@@ -12,11 +12,11 @@
 	</div>
 }
 
-<div class="container p-2">
+<div class="container p-2 form-container">
 
-	<div class="container mt-4 disaster-form-container">
+	<div class="container mt-4 form-container-content">
 
-		<div class="row pt-4">
+		<div class="row">
 			<div class="col text-center">
 				<h1>Add Disaster</h1>
 			</div>
