--- a/Pages/Disaster/EditDisaster.cshtml
+++ b/Pages/Disaster/EditDisaster.cshtml
@@ -12,11 +12,11 @@
 	</div>
 }
 
-<div class="container p-2">
+<div class="container p-2 form-container">
 
-	<div class="container mt-4" id="disaster-form-container">
+	<div class="container mt-4 form-container-content">
 
-		<div class="row pt-3">
+		<div class="row">
 			<div class="input-group">
 				<a class="btn btn-outline-primary" asp-area="" asp-page="/Disaster/Index"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Disaster</a>
 			</div>
