--- a/Pages/EvacuationCenter/_EditEvacuationCenter.cshtml
+++ b/Pages/EvacuationCenter/_EditEvacuationCenter.cshtml
@@ -25,11 +25,11 @@
 	}
 </style>
 
-<div class="container p-2">
+<div class="container p-2 form-container">
 
-	<div class="container mt-4" id="disaster-form-container">
+	<div class="container mt-4 form-container-content">
 
-		<div class="row pt-3">
+		<div class="row">
 			<div class="input-group">
 				<a class="btn btn-outline-primary" asp-area="" asp-page="/EvacuationCenter/Index"><i class="bi bi-arrow-left-circle" style="padding: 5px;"></i>List of Evacuation Center</a>
 			</div>
