--- a/Pages/UserManagement/Create.cshtml
+++ b/Pages/UserManagement/Create.cshtml
@@ -4,10 +4,11 @@
 	ViewData["Title"] = "New User";
 }
 
-<div class="container p-2">
-	<div class="container mt-4 disaster-form-container">
+<div class="container p-2 form-container">
 
-		<div class="row pt-4">
+	<div class="container mt-4 form-container-content">
+
+		<div class="row">
 			<div class="col text-center">
 				<h1>Add New User</h1>
 			</div>
