--- a/Pages/UserManagement/CreateAdmin.cshtml
+++ b/Pages/UserManagement/CreateAdmin.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "New Admin";
 }
 
-<div class="container p-2">
+<<div class="container p-2 form-container">
 
-	<div class="container mt-4 disaster-form-container">
+    <div class="container mt-4 form-container-content">
 
-		<div class="row pt-4">
+        <div class="row">
 			<div class="col text-center">
 				<h1>Add New User</h1>
                 <h6 class="text-dark">Admin</h6>
