--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,11 +22,15 @@ h1, .h1 {
     font-size: calc(1.375rem + 1.5vw);
 }
 
-.disaster-form-container {
+.form-container {
     background-color: #F6F8FB;
-    padding: 20px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
     border-radius: 20px;
+    margin: 50px;
+}
+
+.form-container-content{
+    padding:30px;
 }
 
 .button-spacer {
@@ -72,7 +76,8 @@ body {
 }
 
 .user-container{
-    padding: 20px;
+    margin:10px;
+    padding: 50px;
 }
 
 .user-container .form-check{
