Adjusted the table sizes.

--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -60,8 +60,8 @@
 						<td width="20%">@item.disasterName</td>
 						<td width="10%">@item.disasterType</td>
 						<td width="35%">@item.description</td>
-						<td width="10%">@item.dateOccured</td>
-						<td width=15%>
+						<td width="15%">@item.dateOccured</td>
+						<td width="15%">
 							<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 							<a class="btn btn-success" href="/Disaster/EditDisaster?disasterID=@item.disasterID"><i class="bi bi-pencil-fill"></i></a>
 							<a class="btn btn-danger" href="/Disaster/DeleteDisaster?disasterID=@item.disasterID"><i class="bi bi-trash-fill"></i></a>
