--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -9,7 +9,7 @@
 			<div style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a class="nav-link text-muted" asp-area="" asp-page="/Index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page" style="color: #3F8F8B;"><strong>Evacuation Centers</strong></li>
+					<li class="breadcrumb-item active" aria-current="page" style="color: #3F8F8B;"><strong>Evacuation Center</strong></li>
 				</ol>
 			</div>
 			<div class="input-group">
@@ -48,6 +48,9 @@
 					<th>
 						Status
 					</th>
+					<th>
+
+					</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -57,8 +60,8 @@
 						<td width="30%">@item.centerName</td>
 						<td width="15%">@item.barangayID</td>
 						<td width="15%">@item.maxCapacity</td>
-						<td width="15%">@item.status</td>
-						<td width=15%>
+						<td width="20%">@item.status</td>
+						<td width="15%">
 							<button class="btn btn-dark"><i class="bi bi-card-list"></i></button>
 							<a asp-page="/EvacuationCenter/_EditEvacuationCenter" button class="btn btn-success"><i class="bi bi-pencil-fill"></i></a>
 							<a href="/EvacuationCenter/_DeleteEvacuationCenter?id=@item.centerID" button class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
