--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -37,21 +37,11 @@
 		<table class="table align-middle table-hover " style="width:100%">
 			<thead>
 				<tr>
-					<th>
-						Disaster Name
-					</th>
-					<th>
-						Type
-					</th>
-					<th>
-						Description
-					</th>
-					<th>
-						Date Occurred
-					</th>
-					<th>
-						 
-					</th>
+					<th>Disaster Name</th>
+					<th>Type</th>
+					<th>Description</th>
+					<th>Date Occurred</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -59,12 +49,21 @@
 					<tr>
 						<td width="20%">@item.disasterName</td>
 						<td width="10%">@item.disasterType</td>
-						<td width="35%">@item.description</td>
+						<td width="25%">@item.description</td>
 						<td width="15%">@item.dateOccured</td>
-						<td width="15%">
+						<td width="25%">
+							<!-- Generate Report button -->
 							<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
-							<a class="btn btn-success" href="/Disaster/EditDisaster?disasterID=@item.disasterID"><i class="bi bi-pencil-fill"></i></a>
-							<a class="btn btn-danger" href="/Disaster/DeleteDisaster?disasterID=@item.disasterID"><i class="bi bi-trash-fill"></i></a>
+
+							<!-- Edit button -->
+							<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=@item.disasterID">
+								<i class="bi bi-pencil-fill"></i>Edit
+							</a>
+							
+							<!-- Delete button -->
+							<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete('@item.disasterID')">
+								<i class="bi bi-trash-fill"></i>Delete
+							</a>
 						</td>
 					</tr>
 				}
@@ -72,3 +71,11 @@
 		</table>
 	</div>
 </div>
+
+<script>
+	function confirmDelete(disasterID) {
+		if (confirm("Are you sure you want to delete this disaster?")) {
+			window.location.href = "/Disaster/DeleteDisaster?disasterID=" + disasterID;
+		}
+	}
+</script>
