--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -36,21 +36,11 @@
 		<table class="table align-middle table-hover " style="width:100%">
 			<thead>
 				<tr>
-					<th>
-						Evacuation Center Name
-					</th>
-					<th>
-						Barangay
-					</th>
-					<th>
-						Capacity
-					</th>
-					<th>
-						Status
-					</th>
-					<th>
-
-					</th>
+					<th>Evacuation Center Name</th>
+					<th>Barangay</th>
+					<th>Capacity</th>
+					<th>Status</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -60,14 +50,21 @@
 						<td width="30%">@item.centerName</td>
 						<td width="15%">@item.barangayID</td>
 						<td width="15%">@item.maxCapacity</td>
-						<td width="20%">@item.status</td>
-						<td width="15%">
+						<td width="15%">@item.status</td>
+						<td width="20%">
+							<!-- Disaster Log button -->
 							<button class="btn btn-dark"><i class="bi bi-card-list"></i></button>
-							<a asp-page="/EvacuationCenter/_EditEvacuationCenter" button class="btn btn-success"><i class="bi bi-pencil-fill"></i></a>
-							<a href="/EvacuationCenter/_DeleteEvacuationCenter?id=@item.centerID" button class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
-							<!--<a class="btn btn-danger btn-sm" href="/EvacuationCenter/_DeleteEvacuationCenter?id=@item.centerID"></a>-->
-							<!-- <button class="btn btn-danger"><i class="bi bi-trash-fill"></i></button> -->
+							<a class="btn btn-success" href="/EvacuationCenter/EditEvacuationCenter?centerID=@item.centerID"><i class="bi bi-pencil-fill"></i></a>
+							<a class="btn btn-danger" href="/EvacuationCenter/DeleteEvacuationCenter?centerID=@item.centerID"><i class="bi bi-trash-fill"></i></a>
 
+							<!-- Edit button -->
+							<a class="btn btn-success edit-button" href="/EvacuationCenter/EditEvacuationCenter?centerID=@item.centerID">
+								<i class="bi bi-pencil-fill"></i>Edit
+							</a>
+
+							<!-- Delete button -->
+							<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete('@item.centerID')">
+								<i class="bi bi-trash-fill"></i>Delete
 						</td>
 					</tr>
 				}
@@ -75,3 +72,11 @@
 		</table>
 	</div>
 </div>
+
+<script>
+	function confirmDelete(centerID) {
+		if (confirm("Are you sure you want to delete this evacuation center?")) {
+			window.location.href = "/EvacuationCenter/DeleteEvacuationCenter?centerID=" + centerID;
+		}
+	}
+</script>
