--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.EvacuationCenter.IndexModel
 @{
+	ViewData["Title"] = "Evacuation Center";
 }
 
 <div class="container p-2">
