--- a/Pages/UserManagement/AddLGUStaff.cshtml
+++ b/Pages/UserManagement/AddLGUStaff.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.AddLGUStaffModel
 @{
-    ViewData["Title"] = "Add LGU Staff User";
+	ViewData["Title"] = "Add LGU Staff User";
 }
 
 @if (!string.IsNullOrEmpty(Model.errorMessage))
@@ -11,14 +11,6 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 }
-
-<style>
-    /* CSS to display the label and radio buttons in the same row */
-    .row-container {
-        display: inline-block;
-        vertical-align: middle;
-    }
-</style>
 
 <div class="container p-2 form-container">
     <div class="container mt-4 form-container-content">
@@ -44,8 +36,7 @@
 
                 <!-- FIRST NAME -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        First Name:
+                    <label class="form-label">First Name:
                         <span class="text-danger" style="padding:5px">*</span>
                     </label>
                     <input type="text" id="firstName" name="firstName" class="form-control" required maxlength="65" />
@@ -53,16 +44,14 @@
 
                 <!-- MIDDLE NAME -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Middle Name:
+                    <label class="form-label">Middle Name:
                     </label>
                     <input type="text" id="middleName" name="middleName" class="form-control" maxlength="65" />
                 </div>
 
                 <!-- LAST NAME -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Last Name:
+                    <label class="form-label">Last Name:
                         <span class="text-danger" style="padding:5px">*</span>
                     </label>
                     <input type="text" id="lastName" name="lastName" class="form-control" required maxlength="65" />
@@ -76,26 +65,22 @@
 
                 <!-- SEX -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Sex:
+                    <label class="form-label">Sex
                         <span class="text-danger" style="padding:5px">*</span>
                     </label>
-                    <div class="row-container">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="sex" id="maleRadio" value="M" required>
-                            <label class="form-check-label" for="maleRadio">Male</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="sex" id="femaleRadio" value="F" required>
-                            <label class="form-check-label" for="femaleRadio">Female</label>
-                        </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="sex" id="maleRadio" value="M" required>
+                        <label class="form-check-label">Male</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="sex" id="femaleRadio" value="F" required>
+                        <label class="form-check-label">Female</label>
                     </div>
                 </div>
 
                 <!-- BIRTHDATE -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Birthdate
+                    <label class="form-label">Birthdate
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="date" id="birthdate" name="birthdate" class="form-control" required pattern="\d{4}-\d{2}-\d{2}" />
@@ -103,8 +88,7 @@
 
                 <!-- MOBILE NUMBER -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Mobile Number
+                    <label class="form-label">Mobile Number
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="tel" id="mobileNum" name="mobileNum" class="form-control" required maxlength="11" pattern="[0-9]{11}" placeholder="09XXXXXXXXX" title="Enter digits only." />
@@ -112,8 +96,7 @@
 
                 <!-- EMAIL ADDRESS -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Email Address
+                    <label class="form-label">Email Address
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="email" id="emailAddress" name="emailAddress" class="form-control" required maxlength="65" placeholder="example@email.com" />
