--- a/Pages/UserManagement/AddECStaff.cshtml
+++ b/Pages/UserManagement/AddECStaff.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model AgapayAidSystem.Pages.UserManagement.AddECStaffModel
 @{
-    ViewData["Title"] = "Add EC Staff User";
+	ViewData["Title"] = "Add EC Staff User";
 }
 
 @if (!string.IsNullOrEmpty(Model.errorMessage))
@@ -36,8 +36,7 @@
 
                 <!-- FIRST NAME -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        First Name:
+                    <label class="form-label">First Name:
                         <span class="text-danger" style="padding:5px">*</span>
                     </label>
                     <input type="text" id="firstName" name="firstName" class="form-control" required maxlength="65" />
@@ -51,8 +50,7 @@
 
                 <!-- LAST NAME -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Last Name:
+                    <label class="form-label">Last Name:
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="text" id="lastName" name="lastName" class="form-control" required maxlength="65" />
@@ -66,8 +64,7 @@
 
                 <!-- SEX -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Sex
+                    <label class="form-label">Sex
                         <span class="text-danger" style="padding:5px">*</span>
                     </label>
                     <div class="form-check">
@@ -82,8 +79,7 @@
 
                 <!-- BIRTHDATE -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Birthdate
+                    <label class="form-label">Birthdate
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="date" id="birthdate" name="birthdate" class="form-control" required pattern="\d{4}-\d{2}-\d{2}" />
@@ -91,8 +87,7 @@
 
                 <!-- MOBILE NUMBER -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Mobile Number
+                    <label class="form-label">Mobile Number
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="tel" id="mobileNum" name="mobileNum" class="form-control" required maxlength="11" pattern="[0-9]{11}" placeholder="09XXXXXXXXX" title="Enter digits only." />
@@ -100,8 +95,7 @@
 
                 <!-- EMAIL ADDRESS -->
                 <div class="row mb-3">
-                    <label class="form-label">
-                        Email Address
+                    <label class="form-label">Email Address
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="email" id="emailAddress" name="emailAddress" class="form-control" required maxlength="65" placeholder="example@email.com" />
