--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -39,7 +39,7 @@
 
         <div class="col-auto">
             <div class="d-flex justify-content-end align-items-center">
-                <a asp-page="/UserManagement/Create" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i>Add User</a>
+                <a asp-page="/UserManagement/AddUser" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i>Add User</a>
             </div>
         </div>
     </div>
