Removed Delete page. Added DeleteUser page

--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -111,7 +111,7 @@
 <script>
     function confirmDelete(userID) {
         if (confirm("Are you sure you want to delete this user?")) {
-            window.location.href = "/UserManagement/Delete?userID=" + userID;
+            window.location.href = "/UserManagement/DeleteUser?userID=" + userID;
         }
     }
 </script>
