--- a/Pages/EvacuationCenter/EditEvacuationCenter.cshtml
+++ b/Pages/EvacuationCenter/EditEvacuationCenter.cshtml
@@ -31,13 +31,13 @@
 	}
 </style>
 
-<div class="container p-2">
+<div class="container p-2 form-container">
 
 	<div class="container mt-4" id="disaster-form-container">
 
 		<div class="row pt-4">
 			<div class="col text-center">
-				<h1>Add Evacuation Center</h1>
+				<h1>Edit Evacuation Center</h1>
 			</div>
 		</div>
 
@@ -48,98 +48,98 @@
 				<div class="row mb-3">
 					<p class="text-danger text-end">* Required field</p>
 				</div>
+				<div class="row">
+					<!-- Left column: Center Name, Street Address, and Mobile Number -->
+					<div class="col-md-6">
+						<!-- Evacution Center Name -->
+						<div class="mb-3">
+							<label class="form-label">
+								Evacuation Center Name:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="text" class="form-control" name="centerName" value="@Model.evacuationInfo.centerName" required maxlength="65" />
+						</div>
 
-				<!-- Left column: Center Name, Street Address, and Mobile Number -->
-				<div class="col-md-6">
-					<!-- Evacution Center Name -->
-					<div class="mb-3">
-						<label class="form-label">
-							Evacuation Center Name:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<input type="text" class="form-control" name="centerName" value="@Model.evacuationInfo.centerName" required maxlength="65" />
+						<!-- Street Address -->
+						<div class="mb-3">
+							<label class="form-label">
+								Street Address:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<input type="text" class="form-control" name="streetAddress" value="@Model.evacuationInfo.streetAddress" required maxlength="85" />
+						</div>
+
+						<!-- Mobile Number -->
+						<div class="mb-3">
+							<label class="form-label">Mobile Number:</label>
+							<input type="tel" class="form-control" name="mobileNum" id="mobileNum" value="@Model.evacuationInfo.mobileNum" placeholder="09XXXXXXXXX" maxlength="11" pattern="[0-9]{11}" title="Enter digits only." />
+						</div>
 					</div>
 
-					<!-- Street Address -->
-					<div class="mb-3">
-						<label class="form-label">
-							Street Address:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<input type="text" class="form-control" name="streetAddress" value="@Model.evacuationInfo.streetAddress" required maxlength="85" />
-					</div>
-
-					<!-- Mobile Number -->
-					<div class="mb-3">
-						<label class="form-label">Mobile Number:</label>
-						<input type="tel" class="form-control" name="mobileNum" id="mobileNum" value="@Model.evacuationInfo.mobileNum" placeholder="09XXXXXXXXX" maxlength="11" pattern="[0-9]{11}" title="Enter digits only." />
-					</div>
-				</div>
-
-				<!-- Right column: Evacuation Center Type, Barangay, and Telephone Number -->
-				<div class="col-md-6">
-					<!-- Evacuation Center Type -->
-					<div class="mb-3">
-						<label class="form-label">
-							Type of Evacuation Center:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<select class="form-select" name="centerType" required>
-							<option value="" selected disabled>Select Evacuation Center Type</option>
-							@{
-								if (Model.evacuationInfo.centerType == "School EC")
-								{
-									<option value="School EC" selected>School EC</option>
-								}
-								else
-								{
-									<option value="School EC">School EC</option>
-								}
-
-								if (Model.evacuationInfo.centerType == "Community-based EC")
-								{
-									<option value="Community-based EC" selected>Community-based EC</option>
-								}
-								else
-								{
-									<option value="Community-based EC">Community-based EC</option>
-								}
-							}
-						</select>
-					</div>
-
-					<!-- Barangay -->
-					<div class="mb-3">
-						<label class="form-label">
-							Barangay:
-							<span class="text-danger" style="padding: 5px">*</span>
-						</label>
-						<select class="form-select" name="barangayID" id="barangayID" required>
-							<option value="" selected disabled>Select Barangay</option>
-							@if (Model.Barangays != null)
-							{
-								@foreach (var type in Model.Barangays)
-								{
-									if (type.barangayID == Model.evacuationInfo.barangayID)
+					<!-- Right column: Evacuation Center Type, Barangay, and Telephone Number -->
+					<div class="col-md-6">
+						<!-- Evacuation Center Type -->
+						<div class="mb-3">
+							<label class="form-label">
+								Type of Evacuation Center:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<select class="form-select" name="centerType" required>
+								<option value="" selected disabled>Select Evacuation Center Type</option>
+								@{
+									if (Model.evacuationInfo.centerType == "School EC")
 									{
-										<option value="@type.barangayID" selected>@type.barangayName</option>
+										<option value="School EC" selected>School EC</option>
 									}
 									else
 									{
-										<option value="@type.barangayID">@type.barangayName</option>
+										<option value="School EC">School EC</option>
+									}
+
+									if (Model.evacuationInfo.centerType == "Community-based EC")
+									{
+										<option value="Community-based EC" selected>Community-based EC</option>
+									}
+									else
+									{
+										<option value="Community-based EC">Community-based EC</option>
 									}
 								}
-							}
-						</select>
-					</div>
+							</select>
+						</div>
 
-					<!-- Telephone Number -->
-					<div class="mb-3">
-						<label class="form-label">Telephone Number:</label>
-						<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.evacuationInfo.telephoneNum" placeholder="044XXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
+						<!-- Barangay -->
+						<div class="mb-3">
+							<label class="form-label">
+								Barangay:
+								<span class="text-danger" style="padding: 5px">*</span>
+							</label>
+							<select class="form-select" name="barangayID" id="barangayID" required>
+								<option value="" selected disabled>Select Barangay</option>
+								@if (Model.Barangays != null)
+								{
+									@foreach (var type in Model.Barangays)
+									{
+										if (type.barangayID == Model.evacuationInfo.barangayID)
+										{
+											<option value="@type.barangayID" selected>@type.barangayName</option>
+										}
+										else
+										{
+											<option value="@type.barangayID">@type.barangayName</option>
+										}
+									}
+								}
+							</select>
+						</div>
+
+						<!-- Telephone Number -->
+						<div class="mb-3">
+							<label class="form-label">Telephone Number:</label>
+							<input type="tel" class="form-control" name="telephoneNum" id="telephoneNum" value="@Model.evacuationInfo.telephoneNum" placeholder="044XXXYYYY" maxlength="10" pattern="[0-9]{10}" title="Enter digits only." />
+						</div>
 					</div>
 				</div>
-
 				<!-- Available Facilities -->
 				<div class="mb-3 mt-4 text-center">
 					<label class="form-label">Available Facilities:</label>
