Radio buttons for sex field in one line

--- a/Pages/UserManagement/EditLGUStaff.cshtml
+++ b/Pages/UserManagement/EditLGUStaff.cshtml
@@ -12,6 +12,14 @@
     </div>
 }
 
+<style>
+    /* CSS to display the label and radio buttons in the same row */
+    .row-container {
+        display: inline-block;
+        vertical-align: middle;
+    }
+</style>
+
 <div class="container p-2 form-container">
     <div class="container mt-4 form-container-content">
         <div class="row">
