--- a/Pages/UserManagement/AddLGUStaff.cshtml
+++ b/Pages/UserManagement/AddLGUStaff.cshtml
@@ -12,6 +12,14 @@
     </div>
 }
 
+<style>
+    /* CSS to display the label and radio buttons in the same row */
+    .row-container {
+        display: inline-block;
+        vertical-align: middle;
+    }
+</style>
+
 <div class="container p-2 form-container">
     <div class="container mt-4 form-container-content">
         <div class="row">
@@ -69,16 +77,18 @@
                 <!-- SEX -->
                 <div class="row mb-3">
                     <label class="form-label">
-                        Sex
+                        Sex:
                         <span class="text-danger" style="padding:5px">*</span>
                     </label>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="sex" id="maleRadio" value="M" required>
-                        <label class="form-check-label">Male</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="sex" id="femaleRadio" value="F" required>
-                        <label class="form-check-label">Female</label>
+                    <div class="row-container">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="sex" id="maleRadio" value="M" required>
+                            <label class="form-check-label" for="maleRadio">Male</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="sex" id="femaleRadio" value="F" required>
+                            <label class="form-check-label" for="femaleRadio">Female</label>
+                        </div>
                     </div>
                 </div>
 
