--- a/Pages/UserManagement/EditECStaff.cshtml
+++ b/Pages/UserManagement/EditECStaff.cshtml
@@ -14,7 +14,7 @@
 
 <style>
     /* CSS to display the label and radio buttons in the same row */
-    .radio-container {
+    .row-container {
             display: inline-block;
             vertical-align: middle;
     }  
