--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -75,13 +75,12 @@
 
 							<!-- Edit button -->
 							<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=@item.disasterID">
-								<i class="bi bi-pencil-fill"></i>Edit
+								<i class="bi bi-pencil-fill"></i>
 							</a>
 							
 							<!-- Delete button -->
 							<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete('@item.disasterID')">
-								<i class="bi bi-trash-fill"></i>Delete
-							</a>
+								<i class="bi bi-trash-fill"></i>
 						</td>
 					</tr>
 				}
