--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -82,12 +82,11 @@
 							
 							<!-- Edit button -->
 							<a class="btn btn-success edit-button" href="/EvacuationCenter/EditEvacuationCenter?centerID=@item.centerID">
-								<i class="bi bi-pencil-fill"></i>Edit
-							</a>
+								<i class="bi bi-pencil-fill"></i>
 
 							<!-- Delete button -->
 							<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete('@item.centerID')">
-								<i class="bi bi-trash-fill"></i>Delete
+								<i class="bi bi-trash-fill"></i>
 						</td>
 					</tr>
 				}
