--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -55,7 +55,7 @@
 					<th>Description</th>
 					<th>
 						<a asp-page="./Index" asp-route-sortBy="dateOccured" asp-route-sortOrder="@(Model.SortBy == "dateOccured" && Model.SortOrder == "asc" ? "desc" : "asc")" onclick="toggleArrowIcons('dateOccured')">
-							Disaster Name
+							Date Occured
 							<ion-icon id="dateOccuredArrow" name="@(Model.SortBy == "dateOccured" && Model.SortOrder == "asc" ? "arrow-up-outline" : "arrow-down-outline")"></ion-icon>
 						</a>
 					</th>
@@ -67,9 +67,9 @@
 					<tr>
 						<td width="20%">@item.disasterName</td>
 						<td width="10%">@item.disasterType</td>
-						<td width="25%">@item.description</td>
+						<td width="30%">@item.description</td>
 						<td width="15%">@item.dateOccured</td>
-						<td width="25%">
+						<td width="20%">
 							<!-- Generate Report button -->
 							<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 
